--- a/L03.html
+++ b/L03.html
@@ -101,147 +101,26 @@
 						<p><b>Example for loop range</b></p>
 						<center><img src="images/for4.png"width = "700" height="580" alt=""  /></center>
 						<center><img src="images/for5.png"width = "600" height="700" alt=""  /></center>
-						
+						<right><img src="images/for6.png"width = "880" height="700" alt=""  /></right>
+						<right><img src="images/for7.png"width = "1000" height="700" alt=""  /></right>
+
+						<h2><b>calculating running total</b></h2>
+						<p>A running total is a sum of numbers that accumulates with
+							each iteration of a loop. The variable used to keep the
+							running total is called an accumulator.
+							Programs that calculate the total of a series of numbers
+							typically use two elements:</p>
+							<ul><p><li>A loop that reads each number in the series.</li> <br>
+							<li>A variable that accumulates the total of the numbers as they are read.</li><br></p></ul>
+
+						<p><b>Calculating Running Total Flowchart</b></p>		
+						<right><img src="images/countnumber.png"width = "800" height="500" alt=""  /></right>
+						<right><img src="images/calculating.png"width = "900" height="900" alt=""  /></right>
+						<center><img src="images/calculating2.png"width = "1100" height="300" alt=""  /></center>
+						<center><img src="images/calculating3.png"width = "1100" height="400" alt=""  /></center>
+						<center><img src="images/calculating4.png"width = "700" height="900" alt=""  /></center>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-							<ul><p><li><b>Input:</b> Input is the data before processing. It comes from the mouse, keyboard, microphone, and other external sensors.</li> <br>
-								<li><b>Storage:</b> The storage is how the computer retains input data. The hard drive is used for long-term and mass data storage while the data set for immediate processing is stored temporarily in the Random Access Memory (RAM).</li><br>
-								<li><b>Processing:</b> Processing is where input gets transformed into output. The computer's Central Processing Unit (CPU) is its brain. It's responsible for executing instructions and performing mathematical operations on the input data.</li><br>
-								<li><b>Output:</b> Output is the final result of data processing. It can be anything from images, video, or audio content, even the words you type using a keyboard. You can also receive the output through a printer or a projector instead of directly through your device.</li><br></p></ul>
-							<span class="image main"><img src="images/inputprocessoutput.png" alt="" /></span>
-						<h2>Software?</h2>
-						<p>Software is a set of computer programs and associated documentation and data. This is in contrast to hardware, from which the system is built and which actually performs the work.</p>
-						<span class="image main"><img src="images/software.png" alt="" /></span>
-						<h3>System Software</h3>
-						<ul><p><li><b>Operating Systems:</b> Windows, Mac Os, Linux</li><br>
-							<li><b>Utility Programs:</b> Compression, Virus scanners, Back up</li><br>
-							<li><b>Software Development:</b>Assemblers, Compilers, Interpreter</li><br></ul>
-						<h3>Application Software</h3>
-						<ul><p><li><b>Example Application:</b> Microsoft word, PowerPoint, Excel, Photoshop</li><br></ul>
-						<h2>How Computer store data?</h2>
-						<p>All data stored on storage media – whether that’s hard disk drives (HDDs), solid state drives (SSDs), external hard drives, USB flash drives, SD cards etc – can be converted to a string of bits, otherwise known as binary digits. These binary digits have a value of 1 or 0, and the strings can make up photos, documents, audio and video. A byte is the most common unit of storage and is equal to 8 bits.<br></p>
-						<p>All data in a computer is stored as a number. For example, letters become numbers; the Complete Works of Shakespeare is around 1250 pages in print, contains 40 million bits, with one byte per letter, totalling five megabytes (5MB). Photographs are converted to a set of numbers that indicate the location, colour and brightness of each pixel. Whereas convention numbers use ten digits (0, 1, 2, 3, 4, 5, 6, 7, 8, 9), binary numbers use two digits to represent all possible values. The conventions numbers 0-8 translate into binary numbers as: 0, 1, 10, 11, 100, 101, 110, 111 and 1000. With binary numbers, any value can be stored as a series of items which are either true (1) or false (0).<br></p>
-						<p>Binary data is primarily stored on the hard disk drive (HDD). The device is made up of a spinning disk (or disks) with magnetic coatings and heads that can both read and write information in the form of magnetic patterns. In addition to hard disk drives, floppy disks and tapes also store data magnetically. Newer laptops, as well as mobile phones, tablets, USB flash drives and SD cards, use solid state (or flash) storage. With this storage medium, the binary numbers are instead stored as a series of electrical charges within the NAND flash chips. Because all data is made up of a string of binary numbers, just one number out of place can cause a file to become corrupt. <br></p>
-						<span class="image main"><img src="images/binary.jpg" alt="" /></span>
-						<h2>How Program Work</h2>
-						<p>The CPU runs instructions using a "fetch-execute" cycle: the CPU gets the first instruction in the sequence, executes it (adding two numbers or whatever), then fetches the next instruction and executes it, and so on. Some of the instructions affect the order that the CPU takes through the instruction sequence. For example, an instruction might direct the CPU to jump back to an earlier point in the instruction sequence (loops are implemented this way), or to skip over the next instruction if a particular condition is true (if-statements are implemented this way).
-						<p><b>What is Fetch - Decode - Execute - Cycle</b> </p>
-						<span class="image main"><img src="images/fetch.png" alt="" /></span>
-						<p><b>Assembly language</b></p>
-						<p>In computer programming, assembly language, often referred to simply as Assembly and commonly abbreviated as ASM or asm, is any low-level programming language with a very strong correspondence between the instructions in the language and the architecture's machine code instructions. Assembly language usually has one statement per machine instruction (1:1), but constants, comments, assembler directives, symbolic labels of, e.g., memory locations, registers, and macros are generally also supported.</p>
-						<span class="image main"><img src="images/assembly.png" alt="" /></span>							
-						<p><b>High level language</b></p>	
-						<p>In computer science, a high-level programming language is a programming language with strong abstraction from the details of the computer. In contrast to low-level programming languages, it may use natural language elements, be easier to use, or may automate (or even hide entirely) significant areas of computing systems (e.g. memory management), making the process of developing a program simpler and more understandable than when using a lower-level language. The amount of abstraction provided defines how "high-level" a programming language is.</p>
-						<p><b>Programing language</b></p>
-						<span class="image main"><img src="images/codelanguage.JPG" alt="" /></span>
-						<span class="image main"><img src="images/codelanguage2.JPG" alt="" /></span>
-						<p><b>Compiler</b></p>
-						<span class="image main"><img src="images/compiler.JPG" alt="" /></span>
-						<p><b>Interpreter</b></p>
-						<span class="image main"><img src="images/interpreter.JPG" alt="" /></span>
-						<h2><b>Program Disign</b></h2>
-						<p><b>Program development cycle</b><br></p>
-						<span class="image main"><img src="images/develop cycle.JPG" alt="" /></span>
-						<p>is Programming Development Cycle is a model which is used to represent the stages and tasks that are included orderly in each step to write and put software.<br></p>
-						<p>From the initial process of planning, the particular software can be used as a product in long-term usage by implementation and continuation and used as a completed software application. The Programming Development Cycle contains step by steps like analysis which is a requirement.<br></p>
-						<p>It also designs the solution and after that validates and implements the design. Then test and document the solution. In the below section, you will understand what are the stages or cycles of Programming Development.<br></p>
-						<p><b>Why development cycle important?</b></p>
-						<ul><p><li>It provides an effective framework and method to develop software applications.</li><br>
-							<li>It helps in effectively planning before starting the actual development. SDLC allows developers to analyze the requirements.</li><br>
-							<li>It helps in reducing unnecessary costs during development. During the initial phases, developers can estimate the costs and predict costly mistakes.</li><br>
-							<li>It helps in effectively planning before starting the actual development. SDLC allows developers to analyze the requirements.</li><br>
-							<li>It enables developers to design and build high-quality software products. This is because they follow a systematic process that allows them to test the software before it is rolled out.</li><br>
-							<li>It provides a basis when evaluating the effectiveness of the software. This further enhances the software product.</li><br></ul>
-						<p><b>Designing a Program</b></p>
-						<ul><p><li>Understanding the Program</li><br>
-							<li>Using Design Tools to Create a Model</li><br>
-							<li>Develop Test Data</li><br></p></ul>
-						<p><b>Pseudocode</b></p>
-						<p>In computer science, pseudocode is a plain language description of the steps in an algorithm or another system. Pseudocode often uses structural conventions of a normal programming language, but is intended for human reading rather than machine reading. It typically omits details that are essential for machine understanding of the algorithm, such as variable declarations and language-specific code. The programming language is augmented with natural language description details, where convenient, or with compact mathematical notation. The purpose of using pseudocode is that it is easier for people to understand than conventional programming language code, and that it is an efficient and environment-independent description of the key principles of an algorithm. It is commonly used in textbooks and scientific publications to document algorithms and in planning of software and other algorithms.</p>
-						<h2><b>FlowChart</b></h2>
-						<p>A flowchart is a type of diagram that represents a workflow or process. A flowchart can also be defined as a diagrammatic representation of an algorithm, a step-by-step approach to solving a task.
-						The flowchart shows the steps as boxes of various kinds, and their order by connecting the boxes with arrows. This diagrammatic representation illustrates a solution model to a given problem. Flowcharts are used in analyzing, designing, documenting or managing a process or program in various fields.</p>
-						<p><b>How FlowChart important?</b></p>
-						<p>Flow charts are an important tool for the improvement of processes. By providing a graphical representation, they help project teams to identify the different elements of a process and understand the interrelationships among the various steps.</p>
-						<img src="images/flowchart.JPG" alt="" width="400" height="750" /><br>
-						<p><b>FlowChart Symbol</b></p>
-						<img src="images/flowchartsymbol.JPG" alt="" width="850" height="750" /><br>
-						<img src="images/flowchart2.JPG" alt="" width="700" height="500" /><br>
-						<h2><b>IPO or input process output</b></h2>
-						<p>Computer programs typically perform the following three-step process:</p>
-						<ul><p><li><b>Input</b> is received.</li><br>
-							<li>Some <b>process</b> is performed on the input.</li><br>
-							<li><b>Output</b>is produced.</li><br></p></ul>
-							<span class="image main"><img src="images/ipo.JPG" alt="" /></span>
-						<h2><b>variables</b></h2>
-						<p>Variable are: Storage location that have a name, Name-value pairs<br></p>
-						<span class="image main"><img src="images/variable.JPG" alt="" /></span>
-						<p><b>Valid Variable Names</b><br>1.Case sensitive.<br>2.Must start with a letter.<br>3.Underscores allowed in variable names.<br>4.Not allowed: + -</p>
-						<p><b>Reserved Words</b></p>
-						<span class="image main"><img src="images/reservedword.JPG" alt="" /></span>
-						<p>Reserved incorrect</p>
-						<span class="image main"><img src="images/reservedwordincorrect.JPG" alt="" /></span>
-						<p>Valid Variable Names</p>
-						<span class="image main"><img src="images/reservedwordcorrect.JPG" alt="" /></span>
-						<h2><b>data type</b></h2>
-						<p><b>Numeric Integer</b></p>
-						<p>Basic Data Types</p>
-						<ul><p><li>Numeric</li>
-							<ul><li>Integer</li>
-							<li>Floating point</li></ul>
-							<li>Boolean</li>
-							<li>String</li></p></ul>
-						<p>Composite Data Types (Later lessons)</p>
-						<ul><p><li>List</li>
-							<li>Tuple</li>
-							<li>Dictionary</li>
-							<li>Set</li></p></ul>
-						<h2><b>number</b></h2>
-						<p>Use numbers directly in your source code</p>
-						<img src="images/number.JPG" alt="" width="500" height="250" /><br>
-						<p>Incorrect to use Numbers</p>
-						<span class="image main"><img src="images/numberincorrect.JPG" alt="" /></span>
-						<p>Correct to use Numbers</p>
-						<span class="image main"><img src="images/numbercorrect.JPG" alt="" /></span>
-						<h2><b>boolean</b></h2>
-						<p>A Boolean variable can reference one of two values: True or False. Boolean variables are commonly used as flags<br>, which indicate whether specific conditions exist.</p>
-						<p>Hungry = True <br> Sleepy = False <br></p>
-						<span class="image main"><img src="images/boolean.JPG" alt="" /></span>
-						<p><b>String</b></p>
-						<ul><p><li>Represent text</li>
-							<li>Surrounded by quotes</li></ul>
-						<p>*** Strings are start with ' or " and end with ' or "</p>
-						<span class="image main"><img src="images/str.JPG" alt="" /></span>
-						<h2><b>Python operators</b></h2>
-						<p><b>What are operators in python?</b></p>
-						<p>Operators are special symbols in Python that carry out arithmetic or logical computation. The value that the operator operates on is called the operand.</p>
-						<p><b>Expression Operator And Operand</b></p>
-						<span class="image main"><img src="images/operator.JPG" alt="" /></span>
-						<p><b>Arithmetic Operators</b></p>
-						<span class="image main"><img src="images/operator2.JPG" alt="" /></span>
-						<p>Example</p>
-						<span class="image main"><img src="images/operator3.JPG" alt="" /></span>
-						<p><b>Operator Precedence</b></p>
-						<span class="image main"><img src="images/operatorprecedence.JPG" alt="" /></span>
-						<span class="image main"><img src="images/operatorprecedence2.JPG" alt="" /></span>
-						<p><b>Comparison Operators</b></p>
-						<span class="image main"><img src="images/comparison.JPG" alt="" /></span>
-						<p>Example</p>
-						<span class="image main"><img src="images/comparison2.JPG" alt="" /></span>
-						<p><b>Logical Operators</b></p>
-						<span class="image main"><img src="images/logical.JPG" alt="" /></span>
 
 
 
