--- a/L03.html
+++ b/L03.html
@@ -119,10 +119,42 @@
 						<center><img src="images/calculating2.png"width = "1100" height="300" alt=""  /></center>
 						<center><img src="images/calculating3.png"width = "1100" height="400" alt=""  /></center>
 						<center><img src="images/calculating4.png"width = "700" height="900" alt=""  /></center>
-
-
-
-
+						
+						<h2><b>sentinels</b></h2>
+						<p><b>What Is A Sentinels</b></p>
+						<p> Sentinels are singleton objects that typically represent some terminating (end) condition or have a special, symbolic meaning. Python's built-in None is a sentinel. Python also has other sentinels like NotImplemented and Ellipsis.</p>
+						<p>A sentinel is a special value that marks the end of a sequence of values.</p>
+						<ul><p><li>Simply ask the user, at the end of each loop iteration, if there is another value to process.<br>If the sequence of values is long, however, asking this question at the end of
+						each loop iteration might make the program cumbersome for the user.</li><br>
+						<li>Ask the user at the beginning of the program how many items are in the sequence.<br>This
+							might also inconvenience the user, however. If the sequence is very long, and the user
+							does not know the number of items it contains, it will require the user to count them.</li><br></ul>	
+						<h2><b>input validation loops</b></h2>
+						<p>Input validation is the process of inspecting data that has
+							been input to a program, to make sure it is valid before it is
+							used in a computation. Input validation is commonly done
+							with a loop that iterates as long as an input variable	
+							references bad data.</p>
+						<p><b>Example Input Validation Loops</b></p>
+						<right><img src="images/input validation.png"width = "600" height="500" alt=""  /></right>
+						<h2><b>nested loops</b></h2>
+						<p><b>What is Nested Loop?</b></p>
+						<p>A loop that is inside another loop is called a nested loop.</p>
+						<p><b>Example Nested Loop</b></p>
+						<right><img src="images/nested.png"width = "800" height="800" alt=""  /></right>
+						<h2><b>pass, continue, break</b></h2>
+						<p><b>contiue : Example</b></p>
+						<right><img src="images/continue.png"width = "700" height="800" alt=""  /></right>
+						<p><b>break : Example</b></p>
+						<right><img src="images/break.png"width = "750" height="500" alt=""  /></right>
+						<p><b>pass : Example</b></p>
+						<right><img src="images/pass.png"width = "600" height="900" alt=""  /></right>
+						<p><b>PASS</b></p>
+						<p>We generally use it as a placeholder.
+							Suppose we have a loop or a function that is not implemented yet,
+							but we want to implement it in the future. They cannot have an
+							empty body. The interpreter would complain. So, we use
+							the pass statement to construct a body that does nothing.</p>
 
 					</div>
 				</div>
