--- a/L04.html
+++ b/L04.html
@@ -58,66 +58,51 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1>Computer and Programming</h1>
-						<span class="image main"><img src="images/L01computer.png" alt="" /></span>
-						<h2>What Is Computer?</h2>
-						<p>A computer is an electronic machine that processes information—in other words, an information processor: it takes in raw information (or data) at one end, stores it until it's ready to work on it, chews and crunches it for a bit, then spits out the results at the other end. All these processes have a name. Taking in information is called input, storing information is better known as memory (or storage), chewing information is also known as processing, and spitting out results is called output.</p>
-						<h2>How Does a Computer Work?</h2>
-						<p>A computer processes the input to produce the desired output, but how does a machine outperform the human brain?
-							Conventional computers don't try to mimic the human brain. Instead, they run commands sequentially, with data constantly moving from input and memory to the device's processor. Neuromorphic computers, on the other hand, process data at the same time, making them faster, energy-efficient, and closer to the structure of the human brain.</p>
-							<p>Overall, a computer works in four steps:</p>
-							<ul><p><li><b>Input:</b> Input is the data before processing. It comes from the mouse, keyboard, microphone, and other external sensors.</li> <br>
-								<li><b>Storage:</b> The storage is how the computer retains input data. The hard drive is used for long-term and mass data storage while the data set for immediate processing is stored temporarily in the Random Access Memory (RAM).</li><br>
-								<li><b>Processing:</b> Processing is where input gets transformed into output. The computer's Central Processing Unit (CPU) is its brain. It's responsible for executing instructions and performing mathematical operations on the input data.</li><br>
-								<li><b>Output:</b> Output is the final result of data processing. It can be anything from images, video, or audio content, even the words you type using a keyboard. You can also receive the output through a printer or a projector instead of directly through your device.</li><br></p></ul>
-							<span class="image main"><img src="images/inputprocessoutput.png" alt="" /></span>
-						<h2>Software?</h2>
-						<p>Software is a set of computer programs and associated documentation and data. This is in contrast to hardware, from which the system is built and which actually performs the work.</p>
-						<span class="image main"><img src="images/software.png" alt="" /></span>
-						<h3>System Software</h3>
-						<ul><p><li><b>Operating Systems:</b> Windows, Mac Os, Linux</li><br>
-							<li><b>Utility Programs:</b> Compression, Virus scanners, Back up</li><br>
-							<li><b>Software Development:</b>Assemblers, Compilers, Interpreter</li><br></ul>
-						<h3>Application Software</h3>
-						<ul><p><li><b>Example Application:</b> Microsoft word, PowerPoint, Excel, Photoshop</li><br></ul>
-						<h2>How Computer store data?</h2>
-						<p>All data stored on storage media – whether that’s hard disk drives (HDDs), solid state drives (SSDs), external hard drives, USB flash drives, SD cards etc – can be converted to a string of bits, otherwise known as binary digits. These binary digits have a value of 1 or 0, and the strings can make up photos, documents, audio and video. A byte is the most common unit of storage and is equal to 8 bits.<br></p>
-						<p>All data in a computer is stored as a number. For example, letters become numbers; the Complete Works of Shakespeare is around 1250 pages in print, contains 40 million bits, with one byte per letter, totalling five megabytes (5MB). Photographs are converted to a set of numbers that indicate the location, colour and brightness of each pixel. Whereas convention numbers use ten digits (0, 1, 2, 3, 4, 5, 6, 7, 8, 9), binary numbers use two digits to represent all possible values. The conventions numbers 0-8 translate into binary numbers as: 0, 1, 10, 11, 100, 101, 110, 111 and 1000. With binary numbers, any value can be stored as a series of items which are either true (1) or false (0).<br></p>
-						<p>Binary data is primarily stored on the hard disk drive (HDD). The device is made up of a spinning disk (or disks) with magnetic coatings and heads that can both read and write information in the form of magnetic patterns. In addition to hard disk drives, floppy disks and tapes also store data magnetically. Newer laptops, as well as mobile phones, tablets, USB flash drives and SD cards, use solid state (or flash) storage. With this storage medium, the binary numbers are instead stored as a series of electrical charges within the NAND flash chips. Because all data is made up of a string of binary numbers, just one number out of place can cause a file to become corrupt. <br></p>
-						<span class="image main"><img src="images/binary.jpg" alt="" /></span>
-						<h2>How Program Work</h2>
-						<p>The CPU runs instructions using a "fetch-execute" cycle: the CPU gets the first instruction in the sequence, executes it (adding two numbers or whatever), then fetches the next instruction and executes it, and so on. Some of the instructions affect the order that the CPU takes through the instruction sequence. For example, an instruction might direct the CPU to jump back to an earlier point in the instruction sequence (loops are implemented this way), or to skip over the next instruction if a particular condition is true (if-statements are implemented this way).
-						<p><b>What is Fetch - Decode - Execute - Cycle</b> </p>
-						<span class="image main"><img src="images/fetch.png" alt="" /></span>
-						<p><b>Assembly language</b></p>
-						<p>In computer programming, assembly language, often referred to simply as Assembly and commonly abbreviated as ASM or asm, is any low-level programming language with a very strong correspondence between the instructions in the language and the architecture's machine code instructions. Assembly language usually has one statement per machine instruction (1:1), but constants, comments, assembler directives, symbolic labels of, e.g., memory locations, registers, and macros are generally also supported.</p>
-						<span class="image main"><img src="images/assembly.png" alt="" /></span>							
-						<p><b>High level language</b></p>	
-						<p>In computer science, a high-level programming language is a programming language with strong abstraction from the details of the computer. In contrast to low-level programming languages, it may use natural language elements, be easier to use, or may automate (or even hide entirely) significant areas of computing systems (e.g. memory management), making the process of developing a program simpler and more understandable than when using a lower-level language. The amount of abstraction provided defines how "high-level" a programming language is.</p>
-						<p><b>Programing language</b></p>
-						<span class="image main"><img src="images/codelanguage.JPG" alt="" /></span>
-						<span class="image main"><img src="images/codelanguage2.JPG" alt="" /></span>
-						<p><b>Compiler</b></p>
-						<span class="image main"><img src="images/compiler.JPG" alt="" /></span>
-						<p><b>Interpreter</b></p>
-						<span class="image main"><img src="images/interpreter.JPG" alt="" /></span>
-						<h2><b>Program Disign</b></h2>
-						<p><b>Program development cycle</b><br></p>
-						<span class="image main"><img src="images/develop cycle.JPG" alt="" /></span>
-						<p>is Programming Development Cycle is a model which is used to represent the stages and tasks that are included orderly in each step to write and put software.<br></p>
-						<p>From the initial process of planning, the particular software can be used as a product in long-term usage by implementation and continuation and used as a completed software application. The Programming Development Cycle contains step by steps like analysis which is a requirement.<br></p>
-						<p>It also designs the solution and after that validates and implements the design. Then test and document the solution. In the below section, you will understand what are the stages or cycles of Programming Development.<br></p>
-						<p><b>Why development cycle important?</b></p>
-						<ul><p><li>It provides an effective framework and method to develop software applications.</li><br>
-							<li>It helps in effectively planning before starting the actual development. SDLC allows developers to analyze the requirements.</li><br>
-							<li>It helps in reducing unnecessary costs during development. During the initial phases, developers can estimate the costs and predict costly mistakes.</li><br>
-							<li>It helps in effectively planning before starting the actual development. SDLC allows developers to analyze the requirements.</li><br>
-							<li>It enables developers to design and build high-quality software products. This is because they follow a systematic process that allows them to test the software before it is rolled out.</li><br>
-							<li>It provides a basis when evaluating the effectiveness of the software. This further enhances the software product.</li><br></ul>
-						<p><b>Designing a Program</b></p>
-						<ul><p><li>Understanding the Program</li><br>
-							<li>Using Design Tools to Create a Model</li><br>
-							<li>Develop Test Data</li><br></p></ul>
+						<h1>String</h1>
+						<span class="image main"><img src="images/string.png" alt="" /></span>
+						<h2>Tipps and tricks</h2>
+						<h2><b>multiple input()</b></h2>
+						<p>Multiple Input With Map Function</p>
+						<img src="images/multiple input.png" alt="" />
+						<h2><b>String recap</b></h2>
+						<p><b>String</b></p>
+						<ul><p><li>Represen text</li> <br>
+							<li>Surrounded by quotes</li><br>
+							<li>Color = 'blue'</li><br>
+							<li>Color = "blue"</li><br></p></ul>
+
+						<p><b>Using Quotes within Strings</b></p>
+						<p>sentence = " Hello my name's Aektawan "</p>
+						<p>sentence = 'My favorite snack is "Lay" ' </p>	
+						<p>double = "He said, \"That 's a great tasting watermalon! \" "</p>
+						<p>single = 'He said, "That\'s a great tasting watermalon! " '</p>	
+						<p><b>String And Printing</b></p>
+						<img src="images/strandprinting.png" alt="" />
+						<p><b>String Indexing</b></p>
+						<img src="images/str index.png" alt="" />
+						<p><b>String Are Immutable</b></p>
+						<p>In Python, strings are immutable, which means that once they are created,
+							they cannot be changed. Some operations, such as concatenation, give
+							the impression that they modify strings, but in reality they do not.</p>	
+						<img src="images/strareimmutable.png" alt="" />
+						<h2><b>String slicing</b></h2>
+						<p><b>String Slicing Example</b></p>
+						<p>name = 'Elon Musk'</p>
+						<img src="images/slicing.png" alt="" />
+						<center><p><b>name[Start:Stop:Stride]</b> <b>*** Stride is How many character to move forward ***</b></p></center>
+						<center><img src="images/slicing2.png" alt="" /></center>
+
+						<h2><b>String function len()</b></h2>
+						<p>The len() Function</p>
+						<img src="images/length.png" alt="" />
+						<p>Nesting Function</p>
+						<img src="images/length2.png" alt="" /><br>
+						<img src="images/length3.png" alt="" /><br>
+						<img src="images/length4.png" alt="" /><br>
+
+						<h2><b>Basic string methods lower(), upper(), format()</b></h2>
+			
+
 						<p><b>Pseudocode</b></p>
 						<p>In computer science, pseudocode is a plain language description of the steps in an algorithm or another system. Pseudocode often uses structural conventions of a normal programming language, but is intended for human reading rather than machine reading. It typically omits details that are essential for machine understanding of the algorithm, such as variable declarations and language-specific code. The programming language is augmented with natural language description details, where convenient, or with compact mathematical notation. The purpose of using pseudocode is that it is easier for people to understand than conventional programming language code, and that it is an efficient and environment-independent description of the key principles of an algorithm. It is commonly used in textbooks and scientific publications to document algorithms and in planning of software and other algorithms.</p>
 						<h2><b>FlowChart</b></h2>
