--- a/L04.html
+++ b/L04.html
@@ -117,8 +117,30 @@
 							<li><b>format() </b>: Returns a formatted version of the string.</li><br></p></ul>
 						<p><b>Example upper(), lower()</b></p>
 						<img src="images/lowerupper.png" alt="" /><br>
-
-
+						<img src="images/lowerupper2.png" alt="" /><br>
+						<p><b>String Concatenation</b></p>
+						<img src="images/strconcatenation.png" alt="" /><br>
+						<img src="images/strconcatenation2.png" alt="" /><br>
+						<p><b>String Repetition Operator</b></p>
+						<p>Repeating String</p>
+						<img src="images/repeating str.png" alt="" /><br>
+						<p><b>String Using String()</b></p>
+						<p>The str() Function</p>
+						<img src="images/str().png" alt="" /><br>
+						<p><b>Formatting String</b></p>
+						<img src="images/formatting str.png" alt="" /><br>		
+						<img src="images/formatting str2.png" alt="" /><br>		
+						<p><B>Formatting Strings Alignment</B></p>
+						<p><b><  is Left</b</p>
+						<p><b>^  is Center</b></p>
+						<p><b>>  is Right</b></p></b>
+						<img src="images/formatting str3.png" alt="" /><br>	
+						<p><b>Formatting Strings</b></p>
+						<p>Formatting Strings - Data Types</p>
+						<p>f = Float</p>
+						<p>.Nf = N = The number of decimal places</p>
+						<p>Example<br> {:.3f}</p>
+						<img src="images/formatting str4.png" alt="" /><br>	
 
 
 					</div>
