--- a/L04.html
+++ b/L04.html
@@ -140,9 +140,28 @@
 						<p>f = Float</p>
 						<p>.Nf = N = The number of decimal places</p>
 						<p>Example<br> {:.3f}</p>
-						<img src="images/formatting str4.png" alt="" /><br>	
+						<img src="images/formatting str4.png" alt="" /><br><br>	
+						<h2><b>basic string methods lower(), upper(), format()</b></h2>
+						<p><b>Example</b></p>
+						<img src="images/ice cream.png" alt="" /><br>
+						<img src="images/ice cream2.png" alt="" /><br>
+						<img src="images/bornlist.png" alt="" /><br>
+						<p><b>Basic String Methods</b></p>
+						<img src="images/basic str methods.png" alt="" /><br>
+						<img src="images/basic str methods2.png" alt="" /><br>
+						<img src="images/basic str methods3.png" alt="" /><br>
+						<img src="images/basic str methods4.png" alt="" /><br>
+						<p><b>Basic String Methods Example</b></p>
+						<img src="images/basic str methods5.png" alt="" /><br>
+						<img src="images/basic str methods6.png" alt="" /><br>
 
 
+
+
+
+
+
+						
 					</div>
 				</div>
 
