--- a/L04.html
+++ b/L04.html
@@ -154,14 +154,28 @@
 						<p><b>Basic String Methods Example</b></p>
 						<img src="images/basic str methods5.png" alt="" /><br>
 						<img src="images/basic str methods6.png" alt="" /><br>
+						<img src="images/basic str methods7.png" alt="" /><br>
+						<img src="images/basic str methods8.png" alt="" /><br>		
+						<h2><b>string boolean methods boolean test</b></h2>
+						<img src="images/str boolean methods.png" alt="" /><br>		
+						<p><b>Example String Boolean Methods</b></p>
+						<img src="images/str boolean methods2.png" alt="" /><br>
+						<img src="images/str boolean methods3.png" alt="" /><br><br>				
+						<h2><b>summary</b></h2>
+						<p><b>String Methods</b></p>
+						<ul><p><li>Strings are surrounded by quotation marks.</li> <br>
+							<li>Each character is a string is assigned an index.</li><br>
+							<li>Slicing strings using str[Start:Stop:Stride]</li><br>
+							<li>Built-in functions:</li><br>
+								<ul><li><b>len() </b>: Returns the length of an item.</li><br>
+									<li><b>str() </b>: Returns a string object.</li><br></ul>
+							<li>Everything in Python is an object.</li><br>
+							<li>Objects can have a methods.</li><br>
+							<li>Methods are functions that operate on an object.</li><br>
+							<li>str.upper()...etc.</li><br></p></ul>
 
 
 
-
-
-
-
-						
 					</div>
 				</div>
 
