--- a/L05.html
+++ b/L05.html
@@ -58,7 +58,7 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1>Computer and Programming</h1>
+						<h1>Function</h1>
 						<span class="image main"><img src="images/L01computer.png" alt="" /></span>
 						<h2>What Is Computer?</h2>
 						<p>A computer is an electronic machine that processes information—in other words, an information processor: it takes in raw information (or data) at one end, stores it until it's ready to work on it, chews and crunches it for a bit, then spits out the results at the other end. All these processes have a name. Taking in information is called input, storing information is better known as memory (or storage), chewing information is also known as processing, and spitting out results is called output.</p>
