--- a/L05.html
+++ b/L05.html
@@ -59,17 +59,59 @@
 				<div id="main">
 					<div class="inner">
 						<h1>Function</h1>
-						<span class="image main"><img src="images/L01computer.png" alt="" /></span>
-						<h2>What Is Computer?</h2>
-						<p>A computer is an electronic machine that processes information—in other words, an information processor: it takes in raw information (or data) at one end, stores it until it's ready to work on it, chews and crunches it for a bit, then spits out the results at the other end. All these processes have a name. Taking in information is called input, storing information is better known as memory (or storage), chewing information is also known as processing, and spitting out results is called output.</p>
-						<h2>How Does a Computer Work?</h2>
-						<p>A computer processes the input to produce the desired output, but how does a machine outperform the human brain?
-							Conventional computers don't try to mimic the human brain. Instead, they run commands sequentially, with data constantly moving from input and memory to the device's processor. Neuromorphic computers, on the other hand, process data at the same time, making them faster, energy-efficient, and closer to the structure of the human brain.</p>
-							<p>Overall, a computer works in four steps:</p>
-							<ul><p><li><b>Input:</b> Input is the data before processing. It comes from the mouse, keyboard, microphone, and other external sensors.</li> <br>
-								<li><b>Storage:</b> The storage is how the computer retains input data. The hard drive is used for long-term and mass data storage while the data set for immediate processing is stored temporarily in the Random Access Memory (RAM).</li><br>
-								<li><b>Processing:</b> Processing is where input gets transformed into output. The computer's Central Processing Unit (CPU) is its brain. It's responsible for executing instructions and performing mathematical operations on the input data.</li><br>
-								<li><b>Output:</b> Output is the final result of data processing. It can be anything from images, video, or audio content, even the words you type using a keyboard. You can also receive the output through a printer or a projector instead of directly through your device.</li><br></p></ul>
+						<span class="image main"><img src="images/function.png" alt="" /></span>
+						<p>Functional programming is a programming paradigm in which we try to bind everything in pure mathematical functions style. It is a declarative type of programming style. Its main focus is on “what to solve” in contrast to an imperative style where the main focus is “how to solve“. It uses expressions instead of statements. An expression is evaluated to produce a value whereas a statement is executed to assign variables.</p>
+						<center><img src="images/function2.png" alt="" /></center>
+
+						<h2><b>Concepts of Functional Programming</b></h2>
+						<ul><p><li><b>Pure Functions:</b>These functions have two main properties. First, they always produce the same output for the same arguments irrespective of anything else. Secondly, they have no side-effects i.e. they do modify any argument or global variables or output something.</li> <br>
+							<li><b>Recursion:</b> There are no “for” or “while” loop in functional languages. Iteration in functional languages is implemented through recursion.</li><br>
+							<li><b>Functions are First-Class and can be Higher-Order:</b> First-class functions are treated as first-class variable. The first-class variables can be passed to functions as a parameter, can be returned from functions or stored in data structures.</li><br>
+							<li><b>Variables are Immutable:</b> In functional programming, we can’t modify a variable after it’s been initialized. We can create new variables but we can’t modify existing variables.</li><br></p></ul>
+						<h2><b>FUNCTIONS</b></h2>
+						<ul><p><li>A function is a section of reusable code that performs an action.</li> <br>
+							<li>A function has a name and is called, or executed, by that name.</li><br>
+							<li>Optionally, functions can accept arguments and return data.</li><br></p></ul>
+						<center><img src="images/function3.png" alt="" /></center><br>
+						<img src="images/function4.png" alt="" /><br>
+						
+						<h2><b>functions names</b></h2>
+						<ul><p><li>Cannot use key words as a function name</li> <br>
+							<li>Cannot contain spaces</li><br>
+							<li>First character must be a letter or underscore</li><br>
+							<li>All other characters must be a letter, number or underscore</li><br>
+							<li>Uppercase and lowercase characters are distinct</li><br></p></ul>
+						<img src="images/function5.png" alt="" /><br>
+
+						<h2><b>BENEFITS OF MODULARISING A PROGRAM WITH FUNCTIONS</b></h2>
+						<ul><p><li><b>Simpler Code:</b> easier to understand when it is broken down into functions.</li> <br>
+							<li><b>Code Reuse:</b> written once to perform that operation and then executed any time it is needed.</li><br>
+							<li><b>Better Testing:</b> can test each function in a program individually, easier to fix errors.</li><br>
+							<li><b>Faster Development:</b> library of functions can be incorporated into each program that needs them.</li><br>
+							<li><b>Easier Facilitation of Teamwork :</b> different programmers can be assigned the job of writing different functions.</li><br></p></ul>
+
+						<h2><b>designing program using functions</b></h2>
+						<img src="images/function6.png" alt="" /><br>
+						<img src="images/function7.png" alt="" /><br>
+
+						<h2><b>passing arguments to functions</b></h2>
+						<p><b>LOCAL VARIABLES</b></p>
+						<p>A local variable is created inside a function and cannot be
+							accessed by statements that are outside the function. Different		
+							functions can have local variables with the same names because
+							the functions cannot see each other's local variables.</p>
+						<img src="images/function8.png" alt="" /><br>
+						<img src="images/function9.png" alt="" /><br>
+
+						<h2><b>passing arguments</b></h2>
+						<p>An argument is any piece of data that is passed into a function
+							when the function is called. A parameter is a variable that receives
+							an argument that is passed into a function.</p>
+						<img src="images/function10.png" alt="" /><br>
+						<img src="images/function11.png" alt="" /><br>
+						<img src="images/function12.png" alt="" /><br>
+						<img src="images/function13.png" alt="" /><br>
+						
 							<span class="image main"><img src="images/inputprocessoutput.png" alt="" /></span>
 						<h2>Software?</h2>
 						<p>Software is a set of computer programs and associated documentation and data. This is in contrast to hardware, from which the system is built and which actually performs the work.</p>
