--- a/L05.html
+++ b/L05.html
@@ -124,17 +124,32 @@
 						<img src="images/returnfunction.png" alt="" /><br>
 						<img src="images/returnfunction2.png" alt="" /><br>
 						<p><b>IPO And Function</b></p>
+						<img src="images/ipoandfunction.png" alt="" /><br>
+						<img src="images/ipoandfunction2.png" alt="" /><br>
+						<p><b>Value-returning functions</b></p>
+						<img src="images/returnfunction3.png" alt="" /><br>
 						
+						<h2><b>Storing functions in modules</b></h2>
+						<p><b>Value Returning Function</b></p>
+						<p>A module is a file that contains Python code. Large programs are
+							easier to debug and maintain when they are divided into modules.</p>
+						<p><b>Storing Function In Modules</b></p>
+						<img src="images/STORING FUNCTIONS IN MODULES.png" alt="" /><br>
+						<img src="images/STORING FUNCTIONS IN MODULES2.png" alt="" /><br><br>
+			
+						<p><b>Using Modules</b></p>
+						<img src="images/using modules.png" alt="" /><br>
+						<img src="images/using modules2.png" alt="" /><br>
 
+						<h2><b>Recursive: a function that calls itself.</b></h2>
+						<p><b>Recursive</b></p>
+						<img src="images/recursive.png" alt="" /><br><br>
 
-
-
-
-
-
-
-
-
+						<h2><b>Python common functions</b></h2>
+						<p><b>Example Common Functions</b></p>
+						<img src="images/commonfunction.png" alt="" /><br><br>
+						<img src="images/commonfunction2.png" alt="" /><br><br>
+						<img src="images/commonfunction3.png" alt="" /><br><br>
 
 					</div>
 				</div>
