--- a/L00.html
+++ b/L00.html
@@ -132,17 +132,13 @@
 							<ul><li>1. Choose your repositories on github</li><br>
 								<span class="image main"><img src="images/githubclone.png" alt="" /></span>
 								<li>2. Copy your HTTPS</li><br>
-								<img src="images/githubclone2.png" alt="" /></span>
-								<img src="images/githubclone3.png" alt="" width= "2000" height="1000" />
+								<img src="images/githubclone2.png" alt="" /><br>
+								<img src="images/githubclone3.png" alt="" />
 								<li>3. C + SHIFT + P on Visual Studio Code, Select Git: Clone</li><br>
-								<span class="image main"></span><img src="images/githubclone4.png" alt="" /></span>
-								<li>4. Paste your HTTPS from Github</li>
-								<li>5. Choose where to put a folder</li><br>
-							</ul></p>
-						</div>
-					</div>
-					<div id="main">
-						<div class="inner">
+								<span class="image main"></span><img src="images/githubclone4.png" alt="" /></span><br><br>
+								<li>4. Paste your HTTPS from Github</li><br>
+								<li>5. Choose where to put a folder</li><br></ul></p>
+
                             <h2><p>Python Print String</p></h2>
 							<p>Basic Print String Python will use code *** print ('message') or print ("message") ***<br>
                             <span class="image main"><img src="images/hello.png" alt="" /></span>
