--- a/L06.html
+++ b/L06.html
@@ -115,14 +115,21 @@
 						<h2><b>Using loop to process file</b></h2>
 						<p><b>Detecting End Of File</b></p>
 						<img src="images/detectin end of file.png" alt="" /><br>
-						
+						<img src="images/detecting end of file2.png" alt="" /><br>
+						<p><b>Example Using Loop To Process File</b></p>
+						<img src="images/writesales.png" alt="" /><br><br>
+						<p>Example Using Loop To Process File (while loop)</p>
+						<img src="images/readsaleswhile.png" alt="" /><br><br>
+						<p>Example Using Loop To Process File (while loop)</p>
+						<img src="images/readsalefor.png" alt="" /><br><br>
 
-
-
-
-
-
-
+						<h2><b>processing record</b></h2>
+						<ul><li><b>Record:</b> set of data that describes one item</li>
+						<li><b>Field:</b> single piece of data within a record</li>
+						<li><b>Write record</b> to sequential access file by writing the fields one
+							after the other</li>
+						<li><b>Read record</b> from sequential access file by reading each field
+							until record complete</li></ul><br>	
 
 
 
